# vnigma

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeHelpers.cmake  utils.cmake  vnigma-config.cmake.in
examples/add/: CMakeLists.txt  main.cpp
examples/execution/: CMakeLists.txt  main.cpp
include/vnigma/: baud.h  buffer.hpp  buffer_to_data_variant.h  buffer_to_message_variant.h  command.h  control_type.hpp  data.hpp  device.h  exception.hpp  export.h  guid.h  guid_generator.h  id_t.h  target.h  types.h  vnigma.h
include/vnigma/analog/: port.h  set_config_command.h  set_frequency_command.h  types.h
include/vnigma/base/: reset_command.h
include/vnigma/das/commands/: set_frequency.h
include/vnigma/digital/: get_frequency_command.h  set_frequency_command.h  types.h
include/vnigma/message/: control_message.hpp  das_ack.h  das_analog_send_data.h  das_digital_send_data.h  das_get_config.h  das_greed_send_data.h  das_handshake.h  das_message.h  das_scoped_send_data.h  das_send_data.h  das_serial_send_data.h  das_set_config.h  das_set_frequency.h  das_set_reset.h  message_traits.hpp  message_variant.hpp
include/vnigma/ports/: serial_port.h
include/vnigma/serial/: serial_port.h  set_config_command.h  types.h
include/vnigma/util/: binary.hpp  buffer_manip.h  flag.h  iterator_traits.hpp  move.hpp  number.hpp  parameter_pack.hpp  shared_ptr_array.hpp  variant.h
src/: buffer_to_message_variant.cpp  device.cpp  guid_generator.cpp  target.cpp  types.cpp  vnigma.cpp
src/analog/: port.cpp  set_config_command.cpp  set_frequency_command.cpp  types.cpp
src/digital/: get_frequency_command.cpp  set_frequency_command.cpp  types.cpp
src/message/: das_ack.cpp  das_analog_send_data.cpp  das_digital_send_data.cpp  das_get_config.cpp  das_greed_send_data.cpp  das_handshake.cpp  das_message.cpp  das_scoped_send_data.cpp  das_send_data.cpp  das_serial_send_data.cpp  das_set_config.cpp  das_set_frequency.cpp  das_set_reset.cpp
src/ports/: serial_port.cpp
src/serial/: serial_port.cpp  set_config_command.cpp
src/util/: buffer_manip.cpp
tests/: CMakeLists.txt  add_test.cpp  base_guid_generator_test.cpp  baud_test.cpp  binary_test.cpp  buffer_manip_test.cpp  buffer_test.cpp  buffer_to_message_variant_test.cpp  command_test.cpp  control_message.cpp  control_message_test.cpp  control_test.cpp  das_ack_test.cpp  das_analog_send_data_test.cpp  das_digital_send_data_test.cpp  das_get_config_test.cpp  das_greed_send_data_test.cpp  das_handshake_test.cpp  das_message_test.cpp  das_scoped_send_data_test.cpp  das_sd_p.h  das_send_data.cpp  das_serial_send_data_tests.cpp  das_set_config_test.cpp  das_set_frequency_test.cpp  das_set_reset_test.cpp  data_test.cpp  digital_from_string_test.cpp  message_variant_test.cpp  mock_devices.hpp  mock_generator.hpp  mock_t_command.h  module_test.cpp  number_util_test.cpp  payload_test.cpp  reset_command_test.cpp  serial_port_test.cpp  target_conversion_test.cpp  type_functions_test.cpp
tests/analog/: analog_port_test.cpp  set_config_command_test.cpp  set_frequency_command_test.cpp
tests/digital/: get_frequency_command_test.cpp  set_frequency_command_test.cpp  types_test.cpp
tests/serial/: serial_port_test.cpp  set_config_command_test.cpp
